[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/PlayerWalk.gd" type="Script" id=1]
[ext_resource path="res://Graphics/MC32idle.png" type="Texture" id=2]
[ext_resource path="res://Graphics/MCright.png" type="Texture" id=3]
[ext_resource path="res://Graphics/MCright1.png" type="Texture" id=4]
[ext_resource path="res://Graphics/jump1.png" type="Texture" id=5]
[ext_resource path="res://Graphics/MC256dead3.png" type="Texture" id=6]
[ext_resource path="res://Graphics/MC256dead0.png" type="Texture" id=7]
[ext_resource path="res://Graphics/MCright2.png" type="Texture" id=8]
[ext_resource path="res://Graphics/MC256dead1.png" type="Texture" id=9]
[ext_resource path="res://Graphics/MC256hurt.png" type="Texture" id=10]
[ext_resource path="res://Graphics/MC256dead2.png" type="Texture" id=11]
[ext_resource path="res://Scene/Hitbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Graphics/HealthSprite01.png" type="Texture" id=13]
[ext_resource path="res://Scripts/HealthSprite.gd" type="Script" id=14]
[ext_resource path="res://Scripts/CoinAdd.gd" type="Script" id=15]
[ext_resource path="res://Graphics/Coin.png" type="Texture" id=16]
[ext_resource path="res://Scripts/ChestAdd.gd" type="Script" id=17]
[ext_resource path="res://Graphics/chest1.png" type="Texture" id=18]
[ext_resource path="res://Scripts/GemAdd.gd" type="Script" id=19]
[ext_resource path="res://Graphics/Gem1.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 6 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 10 ) ],
"loop": false,
"name": "Auc",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.06466, 3.05086 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.13827, 2.79711 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.50838, 2.42521 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.1308, 3.06282 )

[node name="PlayerInfo" type="Node2D"]
position = Vector2( 96.1666, 254.558 )

[node name="Player" type="KinematicBody2D" parent="." groups=["Player"]]
position = Vector2( 577.401, 389.314 )
scale = Vector2( 13.8362, 22.0846 )
z_as_relative = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player" groups=["Player"]]
position = Vector2( -1.00604, -3.29184 )
scale = Vector2( 0.0376332, 0.0359517 )
z_index = 1
z_as_relative = false
frames = SubResource( 1 )
animation = "Dead"
speed_scale = 2.5

[node name="PlayerStamp" type="CollisionShape2D" parent="Player" groups=["Player"]]
position = Vector2( -1.12552, -1.67488 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="Camera2D" type="Camera2D" parent="Player" groups=["Player"]]
position = Vector2( 8.09572, -1.10915 )
rotating = true
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true

[node name="Hitbox" parent="Player" instance=ExtResource( 12 )]

[node name="CollisionShape2D" parent="Player/Hitbox" index="0"]
position = Vector2( 0.402386, -1.68418 )
shape = SubResource( 3 )

[node name="Hitbox2" parent="Player" instance=ExtResource( 12 )]
position = Vector2( 0.159359, 0.0855751 )

[node name="CollisionShape2D" parent="Player/Hitbox2" index="0"]
position = Vector2( -2.7847, -1.75549 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( -1.11309, -1.28207 )
scale = Vector2( 0.0722742, 0.0452804 )
enabled = true

[node name="Detector" type="Area2D" parent="Player" groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Detector" groups=["Player"]]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -1.04738, -1.46311 )
shape = SubResource( 4 )

[node name="TresureBox" type="Area2D" parent="Player" groups=["Player"]]

[node name="TresureTake" type="CollisionShape2D" parent="Player/TresureBox" groups=["Player"]]
position = Vector2( -1.08899, -1.66958 )
rotation = -3.14159
scale = Vector2( 0.934936, -0.990523 )
shape = SubResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthSprite" type="Sprite" parent="UI"]
position = Vector2( 139.575, 63.4929 )
scale = Vector2( 2.26045, 1.99213 )
texture = ExtResource( 13 )
hframes = 4
frame = 3
script = ExtResource( 14 )

[node name="Tresure" type="CanvasLayer" parent="."]

[node name="Coin" type="Sprite" parent="Tresure"]
position = Vector2( 406, 66 )
scale = Vector2( 2.22632, 1.89063 )
texture = ExtResource( 16 )
hframes = 4
script = ExtResource( 15 )

[node name="Chest" type="Sprite" parent="Tresure"]
position = Vector2( 642, 66 )
scale = Vector2( 2.226, 1.891 )
texture = ExtResource( 18 )
hframes = 4
script = ExtResource( 17 )

[node name="Gem" type="Sprite" parent="Tresure"]
position = Vector2( 864, 68 )
scale = Vector2( 2.226, 1.891 )
texture = ExtResource( 20 )
hframes = 4
script = ExtResource( 19 )

[connection signal="animation_finished" from="Player/AnimatedSprite" to="Player" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Player/Hitbox" to="Player" method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Player/Hitbox2" to="Player" method="_on_Hitbox2_area_entered"]
[connection signal="area_entered" from="Player/TresureBox" to="Player" method="_on_CoinBox_area_entered"]

[editable path="Player/Hitbox"]
[editable path="Player/Hitbox2"]
